# SafeCrypt

./: CMakeLists.txt  README.md  main.cpp  setup_crypto_library.bat  setup_crypto_library.sh
include/signatures/: BlindSignature.h  GroupSignature.h  MultiSignature.h  ObliviousTransfer.h  ProxySignature.h
include/utils/: CryptoUtils.h
src/signatures/: BlindSignature.cpp  GroupSignature.cpp  MultiSignature.cpp  ObliviousTransfer.cpp  ProxySignature.cpp
src/utils/: CryptoUtils.cpp
tests/: BlindSignatureTests.cpp  CMakeLists.txt  GroupSignatureTests.cpp  MultiSignatureTests.cpp  ObliviousTransferTests.cpp  ProxySignatureTests.cpp
